--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,3 +106,29 @@ table th {
     background: #4e73df;
     color: #fff;
 }
+
+.btn-hapus {
+    background: #e74a3b;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.btn-hapus:hover {
+    background: #c0392b;
+}
+
+.btn-hapus {
+    background: #e74a3b;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.btn-hapus:hover {
+    background: #c0392b;
+}
